--- a/perceptron/analisi-facce.ipynb
+++ b/perceptron/analisi-facce.ipynb
@@ -171,7 +171,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 2, 4, 6, 3, 5, 1], dtype=int64)"
+       "array([0, 2, 4, 6, 3, 5, 1])"
       ]
      },
      "execution_count": 4,
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
        "[609 rows x 2305 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
        "[609 rows x 2304 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
        "Name: emotion, Length: 609, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1487,7 @@
        "[609 rows x 2304 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,24 +1511,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = neuron.Neuron(len(X.columns), 0.17, lambda x: 2 if np.arctan(x) > 0 else 0)\n",
+    "n = neuron.Neuron(len(X.columns), 0.17, lambda x: 2 if np.arctan(x) > 0 else 0, lambda x: 1 / (1 + x ** 2))\n",
     "n.fit(training_set_X.values, training_set_y.values, 100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5300546448087432\n"
+      "0.5355191256830601\n"
      ]
     }
    ],
@@ -1545,7 +1545,7 @@
    "hash": "1e53beecbdf7fc5420cf00c181e9ca62932da7cdf4f137270ce66ec14e25c6ce"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1559,9 +1559,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.4"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
